# espressopost

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/calibration/: CMakeLists.txt  calibration.cpp
components/calibration/include/: calibration.hpp
components/climate/: CMakeLists.txt  climate.cpp
components/climate/include/: climate.hpp
components/cloud/: CMakeLists.txt  cloud.cpp  cloud_json.cpp  cloud_portal.cpp  cloud_portal.hpp
components/cloud/include/: cloud.hpp  cloud_json.hpp
components/display/: CMakeLists.txt  display.cpp  lv_port_mem.c
components/display/include/: display.hpp
components/model/: CMakeLists.txt  model.cpp  model_math.cpp
components/model/include/: model.hpp  model_math.hpp
components/power/: CMakeLists.txt  power.cpp
components/power/include/: power.hpp
components/presets/: CMakeLists.txt  presets.cpp
components/presets/include/: presets.hpp
components/rtc/: CMakeLists.txt  rtc.cpp
components/rtc/include/: rtc.hpp
components/storage/: CMakeLists.txt  storage.cpp
components/storage/include/: storage.hpp
components/touch/: CMakeLists.txt  touch.cpp
components/touch/include/: touch.hpp
components/ui/: CMakeLists.txt  ui_bar.cpp  ui_bar.hpp  ui_bringup.cpp  ui_changes.cpp  ui_changes.hpp  ui_connections.cpp  ui_connections.hpp  ui_menu.cpp  ui_menu.hpp  ui_preset_edit.cpp  ui_preset_edit.hpp  ui_preset_readout.cpp  ui_preset_readout.hpp  ui_presets.cpp  ui_presets.hpp  ui_report.cpp  ui_stepper.cpp  ui_stepper.hpp  ui_theme.hpp  ui_time_stepper.cpp  ui_time_stepper.hpp
components/ui/include/: ui.hpp
docs/: screen_scaling.md
main/: CMakeLists.txt  app_main.cpp  board_pins.hpp  idf_component.yml
tests/host/: CMakeLists.txt  run.sh  test_cloud_json.cpp  test_model.cpp
tools/: README.md  analyze_shots.py  cloud_apps_script.md  svg_to_lvgl.py
